--- a/SBG_Tracker/style.css
+++ b/SBG_Tracker/style.css
@@ -37,7 +37,7 @@ body{
     margin-top: 2%;
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
     font-size: 24px;
 }
@@ -62,6 +62,10 @@ body{
 
 .resources p{
     margin: 2px;
+}
+
+input { 
+    text-align: center; 
 }
 
 .newHero{
