--- a/SBG_Tracker/style.css
+++ b/SBG_Tracker/style.css
@@ -18,7 +18,7 @@ body{
     width: 100%;
     background-color: white;
     color: black;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 #resourceAmount{
@@ -78,7 +78,8 @@ body{
 }
 
 .resources p{
-    margin: 2px;
+    margin: 2px 15px;
+    font-size: 28px;
 }
 
 input { 
