--- a/Scenario_Selector/style.css
+++ b/Scenario_Selector/style.css
@@ -7,10 +7,14 @@
 :root {
     --gold: #ffd700;
     --white: #fafafa;
+    --green: #25b425;
+    --red: #d40000;
+    --black: #131313;
+    --gray: #808080;
 }
 
 body{
-    background-color: gray;
+    background-color: var(--gray);
 }
 
 .container{
@@ -39,8 +43,8 @@ body{
     background-color: var(--gold);
     border: none;
     font-size: 25px;
-    text-shadow: 2px 2px 10px black;
-    box-shadow: 1px 1px 5px 0px black;
+    text-shadow: 2px 2px 10px var(--black);
+    box-shadow: 1px 1px 5px 0px var(--black);
 }
 
 .hidden {
@@ -56,10 +60,10 @@ body{
     margin: 20px 0;
 }
 .side_selection h1.good{
-    color: green;
+    color: var(--green);
 }
 .side_selection h1.evil{
-    color: red;
+    color: var(--red);
 }
 
 .scenario {
@@ -102,7 +106,7 @@ body{
     margin-top: 20px;
     padding-top: 10px;
     text-align: center;
-    border-top: 1px solid gray;
+    border-top: 1px solid var(--gray);
 }
 .scenario .scenario_body h3 {
     margin-bottom: 5px;
