--- a/Scenario_Selector/style.css
+++ b/Scenario_Selector/style.css
@@ -17,6 +17,19 @@ body{
     background-color: var(--gray);
 }
 
+nav {
+    margin: 5px 0 25px 0;
+}
+nav a {
+    color: var(--gold);
+    text-decoration: none;
+    padding: 5px 10px 5px 7px;
+    border: 3px solid var(--gold);
+    border-radius: 250px;
+    font-size: 28px;
+    font-weight: 800;
+}
+
 .container{
     padding: 20px;
 }
