--- a/Scenario_Selector/style.css
+++ b/Scenario_Selector/style.css
@@ -19,14 +19,18 @@ body{
 
 nav {
     margin: 5px 0 25px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 nav a {
-    color: var(--gold);
+    color: var(--black);
+    background-color: var(--white);
     text-decoration: none;
-    padding: 2px 7px 5px 7px;
+    padding: 5px 7px 5px 7px;
     border: 3px solid var(--gold);
     border-radius: 250px;
-    font-size: 28px;
+    font-size: 14px;
     font-weight: 800;
 }
 
