--- a/Scenario_Selector/style.css
+++ b/Scenario_Selector/style.css
@@ -6,6 +6,7 @@
 
 :root {
     --gold: #ffd700;
+    --gold-faded: #ffd70066;
     --white: #fafafa;
     --green: #25b425;
     --red: #d40000;
@@ -152,4 +153,63 @@ nav a {
 .scenario .scenario_body .special_rules table td {
     min-width: 40px;
     padding: 10px 5px;
+}
+
+
+/* .toggle {
+    margin: 0 0 1.5rem; 
+    box-sizing: border-box;
+    font-size: 0;
+    display: flex; 
+    flex-flow: row nowrap;
+    justify-content: flex-start; 
+    align-items: stretch;
+}
+.toggle input + label {
+    margin: 0; padding: .75rem 2rem; box-sizing: border-box;
+    position: relative; display: inline-block;
+    border: solid 1px #DDD; background-color: #FFF;
+    font-size: 1rem; line-height: 140%; font-weight: 600; text-align: center;
+    box-shadow: 0 0 0 rgba(255,255,255,0);
+    transition:   border-color .15s ease-out, 
+        color .25s ease-out, 
+        background-color .15s ease-out,
+        box-shadow .15s ease-out;
+}
+.toggle input:hover + label {border-color: blue}
+.toggle input:checked + label {
+    background-color: red;
+    color: #FFF;
+    box-shadow: grey;
+    border-color: green;
+    z-index: 1;
+} */
+
+  
+.toggle {
+    display: flex;
+    border-radius: 50px;
+    margin: 10px 0 20px 0;
+    width: 100%;
+    height: 50px;
+    background-color: var(--white);
+    border: 3px solid var(--gold);
+    position: relative;
+    overflow: hidden;
+}
+.toggle button {
+    background-color: transparent;
+    border: none;
+    width: 50%;
+    font-weight: 600;
+    z-index: 3;
+}
+.toggle .toggle_slider {
+    position: absolute;
+    left: 0%;
+    width: 50%;
+    height: 100%;
+    background-color: var(--gold-faded);
+    border-radius: 50px;
+    transition: 0.4s ease-in-out;
 }
